// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.c0 {
  margin: 0;
  border: 0;
  padding: 0;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-transition: border-color .25s ease-in-out, box-shadow .1s ease-in-out, background-color .25s ease-in-out, color .25s ease-in-out;
  transition: border-color .25s ease-in-out, box-shadow .1s ease-in-out, background-color .25s ease-in-out, color .25s ease-in-out;
  border: 1px solid;
  border-radius: 4px;
  width: 100%;
  box-sizing: border-box;
  vertical-align: middle;
  font-family: inherit;
  padding: 0.7142857142857143em 0.8571428571428571em;
  min-height: 40px;
  line-height: 1.2857142857142858;
  font-size: 14px;
  border-color: #d8dcde;
  background-color: #fff;
  color: #2f3941;
}

.c1::-ms-browse {
  border-radius: 2px;
}

.c1::-ms-clear,
.c1::-ms-reveal {
  display: none;
}

.c1::-moz-color-swatch {
  border: none;
  border-radius: 2px;
}

.c1::-webkit-color-swatch {
  border: none;
  border-radius: 2px;
}

.c1::-webkit-color-swatch-wrapper {
  padding: 0;
}

.c1::-webkit-clear-button,
.c1::-webkit-inner-spin-button,
.c1::-webkit-search-cancel-button,
.c1::-webkit-search-results-button {
  display: none;
}

.c1::-webkit-datetime-edit {
  line-height: 1;
}

.c1::-webkit-input-placeholder {
  opacity: 1;
}

.c1::-moz-placeholder {
  opacity: 1;
}

.c1:-ms-input-placeholder {
  opacity: 1;
}

.c1::placeholder {
  opacity: 1;
}

.c1:invalid {
  box-shadow: none;
}

.c1[type='file']::-ms-value {
  display: none;
}

.c1::-ms-browse {
  font-size: 12px;
}

.c1[type='date'],
.c1[type='datetime-local'],
.c1[type='file'],
.c1[type='month'],
.c1[type='time'],
.c1[type='week'] {
  max-height: 40px;
}

.c1[type='file'] {
  line-height: 1;
}

.c1::-moz-color-swatch {
  margin-top: -5px;
  margin-left: -7px;
  width: calc(100% + 14px);
  height: 28px;
}

.c1::-webkit-color-swatch {
  margin: -5px -7px;
}

.c2 + .c1,
.sc-bwzfXH + .c1,
.sc-ifAKCX + .c1,
.c1 + .sc-bwzfXH,
.c1 + .sc-ifAKCX {
  margin-top: 8px;
}

.c1 .c3:first-child {
  margin: auto 8px auto 0;
}

.c1 .c3:last-child {
  margin: auto 0 auto 8px;
}

.c1:focus {
  outline: none;
}

.c1::-webkit-input-placeholder {
  color: #c2c8cc;
}

.c1::-moz-placeholder {
  color: #c2c8cc;
}

.c1:-ms-input-placeholder {
  color: #c2c8cc;
}

.c1::placeholder {
  color: #c2c8cc;
}

.c1:hover {
  border-color: #5293c7;
}

.c1:focus,
.c1[data-garden-focus-visible='true'] {
  border-color: #1f73b7;
  box-shadow: 0 0 0 3px rgba(31,115,183,0.35);
}

.c1:disabled,
.c1[aria-disabled='true'] {
  border-color: #e9ebed;
  background-color: #f8f9f9;
  color: #c2c8cc;
}

.c1:disabled {
  cursor: default;
}

@media screen and (min--moz-device-pixel-ratio:0) {
  .c1[type='number'] {
    -webkit-appearance: textfield;
    -moz-appearance: textfield;
    appearance: textfield;
  }
}

@supports (-ms-ime-align:auto) {
  .c1[type='color'] {
    padding: 1px 3px;
  }
}

<div>
  <div
    class="container"
    data-testid="chat-badge"
  >
    <div
      class="title"
    >
      zendesk chat
    </div>
    <div
      class="splashDisplayContainer splashPadding"
      role="button"
      tabindex="0"
    >
      <table
        class="splashTable"
      >
        <tbody>
          <tr>
            <td
              class="textContainer"
            />
            <td
              class="imageContainer"
            >
              <span
                class="container chatIcon Icon--channelChoice-chat"
                data-testid="Icon--channelChoice-chat"
                type="Icon--channelChoice-chat"
              >
                <svg
                  aria-hidden="true"
                  realfilename="widget-icon_channelChoice-chat.svg"
                />
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="inputContainer"
    >
      <div
        class="c0"
        data-garden-id="forms.field"
        data-garden-version="8.15.0"
      >
        <input
          aria-describedby="1val-field_1.3.4--hint"
          aria-invalid="false"
          aria-labelledby="1val-field_1.3.4--label"
          class="input c1"
          data-garden-id="forms.input"
          data-garden-version="8.15.0"
          data-testid="message-field"
          id="1val-field_1.3.4--input"
          placeholder="Type your message here"
          value=""
        />
      </div>
      <span
        class="container sendButton Icon--sendChat"
        data-testid="Icon--sendChat"
        role="button"
        tabindex="0"
        type="Icon--sendChat"
      >
        <svg
          aria-hidden="true"
          realfilename="widget-icon_sendChat.svg"
        />
      </span>
    </div>
    <span
      class="container minimizeButton Icon--dash"
      data-testid="Icon--dash"
      role="button"
      tabindex="0"
      type="Icon--dash"
    >
      <svg
        aria-hidden="true"
        realfilename="widget-icon_dash.svg"
      />
    </span>
  </div>
</div>
`;

exports[`with chatBadgeColor passed in 1`] = `
.c0 {
  margin: 0;
  border: 0;
  padding: 0;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-transition: border-color .25s ease-in-out, box-shadow .1s ease-in-out, background-color .25s ease-in-out, color .25s ease-in-out;
  transition: border-color .25s ease-in-out, box-shadow .1s ease-in-out, background-color .25s ease-in-out, color .25s ease-in-out;
  border: 1px solid;
  border-radius: 4px;
  width: 100%;
  box-sizing: border-box;
  vertical-align: middle;
  font-family: inherit;
  padding: 0.7142857142857143em 0.8571428571428571em;
  min-height: 40px;
  line-height: 1.2857142857142858;
  font-size: 14px;
  border-color: #d8dcde;
  background-color: #fff;
  color: #2f3941;
}

.c1::-ms-browse {
  border-radius: 2px;
}

.c1::-ms-clear,
.c1::-ms-reveal {
  display: none;
}

.c1::-moz-color-swatch {
  border: none;
  border-radius: 2px;
}

.c1::-webkit-color-swatch {
  border: none;
  border-radius: 2px;
}

.c1::-webkit-color-swatch-wrapper {
  padding: 0;
}

.c1::-webkit-clear-button,
.c1::-webkit-inner-spin-button,
.c1::-webkit-search-cancel-button,
.c1::-webkit-search-results-button {
  display: none;
}

.c1::-webkit-datetime-edit {
  line-height: 1;
}

.c1::-webkit-input-placeholder {
  opacity: 1;
}

.c1::-moz-placeholder {
  opacity: 1;
}

.c1:-ms-input-placeholder {
  opacity: 1;
}

.c1::placeholder {
  opacity: 1;
}

.c1:invalid {
  box-shadow: none;
}

.c1[type='file']::-ms-value {
  display: none;
}

.c1::-ms-browse {
  font-size: 12px;
}

.c1[type='date'],
.c1[type='datetime-local'],
.c1[type='file'],
.c1[type='month'],
.c1[type='time'],
.c1[type='week'] {
  max-height: 40px;
}

.c1[type='file'] {
  line-height: 1;
}

.c1::-moz-color-swatch {
  margin-top: -5px;
  margin-left: -7px;
  width: calc(100% + 14px);
  height: 28px;
}

.c1::-webkit-color-swatch {
  margin: -5px -7px;
}

.c2 + .c1,
.sc-bwzfXH + .c1,
.sc-ifAKCX + .c1,
.c1 + .sc-bwzfXH,
.c1 + .sc-ifAKCX {
  margin-top: 8px;
}

.c1 .c3:first-child {
  margin: auto 8px auto 0;
}

.c1 .c3:last-child {
  margin: auto 0 auto 8px;
}

.c1:focus {
  outline: none;
}

.c1::-webkit-input-placeholder {
  color: #c2c8cc;
}

.c1::-moz-placeholder {
  color: #c2c8cc;
}

.c1:-ms-input-placeholder {
  color: #c2c8cc;
}

.c1::placeholder {
  color: #c2c8cc;
}

.c1:hover {
  border-color: #5293c7;
}

.c1:focus,
.c1[data-garden-focus-visible='true'] {
  border-color: #1f73b7;
  box-shadow: 0 0 0 3px rgba(31,115,183,0.35);
}

.c1:disabled,
.c1[aria-disabled='true'] {
  border-color: #e9ebed;
  background-color: #f8f9f9;
  color: #c2c8cc;
}

.c1:disabled {
  cursor: default;
}

@media screen and (min--moz-device-pixel-ratio:0) {
  .c1[type='number'] {
    -webkit-appearance: textfield;
    -moz-appearance: textfield;
    appearance: textfield;
  }
}

@supports (-ms-ime-align:auto) {
  .c1[type='color'] {
    padding: 1px 3px;
  }
}

<div>
  <div
    class="container"
    data-testid="chat-badge"
  >
    <div
      class="title"
    >
      zendesk chat
    </div>
    <div
      class="splashDisplayContainer splashPadding"
      role="button"
      tabindex="0"
    >
      <table
        class="splashTable"
      >
        <tbody>
          <tr>
            <td
              class="textContainer"
            />
            <td
              class="imageContainer"
            >
              <span
                class="container chatIcon Icon--channelChoice-chat"
                data-testid="Icon--channelChoice-chat"
                type="Icon--channelChoice-chat"
              >
                <svg
                  aria-hidden="true"
                  realfilename="widget-icon_channelChoice-chat.svg"
                />
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="inputContainer"
    >
      <div
        class="c0"
        data-garden-id="forms.field"
        data-garden-version="8.15.0"
      >
        <input
          aria-describedby="2val-field_1.3.4--hint"
          aria-invalid="false"
          aria-labelledby="2val-field_1.3.4--label"
          class="input c1"
          data-garden-id="forms.input"
          data-garden-version="8.15.0"
          data-testid="message-field"
          id="2val-field_1.3.4--input"
          placeholder="Type your message here"
          value=""
        />
      </div>
      <span
        class="container sendButton Icon--sendChat"
        data-testid="Icon--sendChat"
        role="button"
        tabindex="0"
        type="Icon--sendChat"
      >
        <svg
          aria-hidden="true"
          realfilename="widget-icon_sendChat.svg"
        />
      </span>
    </div>
    <span
      class="container minimizeButton Icon--dash"
      data-testid="Icon--dash"
      role="button"
      tabindex="0"
      type="Icon--dash"
    >
      <svg
        aria-hidden="true"
        realfilename="widget-icon_dash.svg"
      />
    </span>
  </div>
</div>
`;

exports[`with label passed in 1`] = `
.c0 {
  margin: 0;
  border: 0;
  padding: 0;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-transition: border-color .25s ease-in-out, box-shadow .1s ease-in-out, background-color .25s ease-in-out, color .25s ease-in-out;
  transition: border-color .25s ease-in-out, box-shadow .1s ease-in-out, background-color .25s ease-in-out, color .25s ease-in-out;
  border: 1px solid;
  border-radius: 4px;
  width: 100%;
  box-sizing: border-box;
  vertical-align: middle;
  font-family: inherit;
  padding: 0.7142857142857143em 0.8571428571428571em;
  min-height: 40px;
  line-height: 1.2857142857142858;
  font-size: 14px;
  border-color: #d8dcde;
  background-color: #fff;
  color: #2f3941;
}

.c1::-ms-browse {
  border-radius: 2px;
}

.c1::-ms-clear,
.c1::-ms-reveal {
  display: none;
}

.c1::-moz-color-swatch {
  border: none;
  border-radius: 2px;
}

.c1::-webkit-color-swatch {
  border: none;
  border-radius: 2px;
}

.c1::-webkit-color-swatch-wrapper {
  padding: 0;
}

.c1::-webkit-clear-button,
.c1::-webkit-inner-spin-button,
.c1::-webkit-search-cancel-button,
.c1::-webkit-search-results-button {
  display: none;
}

.c1::-webkit-datetime-edit {
  line-height: 1;
}

.c1::-webkit-input-placeholder {
  opacity: 1;
}

.c1::-moz-placeholder {
  opacity: 1;
}

.c1:-ms-input-placeholder {
  opacity: 1;
}

.c1::placeholder {
  opacity: 1;
}

.c1:invalid {
  box-shadow: none;
}

.c1[type='file']::-ms-value {
  display: none;
}

.c1::-ms-browse {
  font-size: 12px;
}

.c1[type='date'],
.c1[type='datetime-local'],
.c1[type='file'],
.c1[type='month'],
.c1[type='time'],
.c1[type='week'] {
  max-height: 40px;
}

.c1[type='file'] {
  line-height: 1;
}

.c1::-moz-color-swatch {
  margin-top: -5px;
  margin-left: -7px;
  width: calc(100% + 14px);
  height: 28px;
}

.c1::-webkit-color-swatch {
  margin: -5px -7px;
}

.c2 + .c1,
.sc-bwzfXH + .c1,
.sc-ifAKCX + .c1,
.c1 + .sc-bwzfXH,
.c1 + .sc-ifAKCX {
  margin-top: 8px;
}

.c1 .c3:first-child {
  margin: auto 8px auto 0;
}

.c1 .c3:last-child {
  margin: auto 0 auto 8px;
}

.c1:focus {
  outline: none;
}

.c1::-webkit-input-placeholder {
  color: #c2c8cc;
}

.c1::-moz-placeholder {
  color: #c2c8cc;
}

.c1:-ms-input-placeholder {
  color: #c2c8cc;
}

.c1::placeholder {
  color: #c2c8cc;
}

.c1:hover {
  border-color: #5293c7;
}

.c1:focus,
.c1[data-garden-focus-visible='true'] {
  border-color: #1f73b7;
  box-shadow: 0 0 0 3px rgba(31,115,183,0.35);
}

.c1:disabled,
.c1[aria-disabled='true'] {
  border-color: #e9ebed;
  background-color: #f8f9f9;
  color: #c2c8cc;
}

.c1:disabled {
  cursor: default;
}

@media screen and (min--moz-device-pixel-ratio:0) {
  .c1[type='number'] {
    -webkit-appearance: textfield;
    -moz-appearance: textfield;
    appearance: textfield;
  }
}

@supports (-ms-ime-align:auto) {
  .c1[type='color'] {
    padding: 1px 3px;
  }
}

<div>
  <div
    class="container"
    data-testid="chat-badge"
  >
    <div
      class="title"
    >
      zendesk chat
    </div>
    <div
      class="splashDisplayContainer splashPadding"
      role="button"
      tabindex="0"
    >
      <table
        class="splashTable"
      >
        <tbody>
          <tr>
            <td
              class="textContainer"
            >
              wanna chat?
            </td>
            <td
              class="imageContainer"
            >
              <span
                class="container chatIcon Icon--channelChoice-chat"
                data-testid="Icon--channelChoice-chat"
                type="Icon--channelChoice-chat"
              >
                <svg
                  aria-hidden="true"
                  realfilename="widget-icon_channelChoice-chat.svg"
                />
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="inputContainer"
    >
      <div
        class="c0"
        data-garden-id="forms.field"
        data-garden-version="8.15.0"
      >
        <input
          aria-describedby="3val-field_1.3.4--hint"
          aria-invalid="false"
          aria-labelledby="3val-field_1.3.4--label"
          class="input c1"
          data-garden-id="forms.input"
          data-garden-version="8.15.0"
          data-testid="message-field"
          id="3val-field_1.3.4--input"
          placeholder="Type your message here"
          value=""
        />
      </div>
      <span
        class="container sendButton Icon--sendChat"
        data-testid="Icon--sendChat"
        role="button"
        tabindex="0"
        type="Icon--sendChat"
      >
        <svg
          aria-hidden="true"
          realfilename="widget-icon_sendChat.svg"
        />
      </span>
    </div>
    <span
      class="container minimizeButton Icon--dash"
      data-testid="Icon--dash"
      role="button"
      tabindex="0"
      type="Icon--dash"
    >
      <svg
        aria-hidden="true"
        realfilename="widget-icon_dash.svg"
      />
    </span>
  </div>
</div>
`;
